plugins/groovy/testdata/highlighting/Diamonds.groovy
List<String> f1 = new ArrayList<error descr="Diamonds are not allowed in Groovy 1.6"><></error>()
List<String> f2 = new ArrayList<String>()
List<String> f2 = new ArrayList<error descr="'(' expected"><</error>(<error descr="Expression expected">)</error>
List<String> f2 = new ArrayList<error descr="'(' expected">></error>(<error descr="Expression expected">)</error>